apps/dufs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dufs-service
spec:
  selector:
    app: dufs
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
